.navbar-area > #navbarNavDropdown  overflow problem fix and #main-menu > .dropdown-menu  overflow: hidden; problem fix and .dropdown-menu hover Design Complete

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -178,7 +178,6 @@ img{
 
 #header .header-nav .navbar {
     padding: 0;
-    overflow: hidden;
 }
 
 
@@ -206,14 +205,12 @@ img{
     padding: 10px 0px 10px 0px;
 }
 
-#header .navbar-area .header-nav .navbar ul li > a {
+#header .navbar-area .header-nav .navbar ul li a {
     font-size: 17px;
     font-weight: 400;
     text-transform: capitalize;
     padding: 0;
-    margin: 0px 15px 0px 15px;
-    border-bottom: 1px solid transparent;
-    
+    margin: 0px 15px;
 }
 
 #header .navbar-area .header-nav .navbar ul li a {
@@ -244,7 +241,7 @@ img{
 
 
 /* Navbar Area > Header Nav > Main Menu > Dropdown Menu Css */
-#header .navbar-area .header-nav .navbar ul li ul {
+#header .navbar-area .header-nav .navbar ul li ul.dropdown-menu {
     -webkit-box-shadow: 0px 0px 15px 0px rgb(0 0 0 / 10%);
     box-shadow: 0px 0px 15px 0px rgb(0 0 0 / 10%);
     background: #ffffff;
@@ -266,24 +263,55 @@ img{
     padding-bottom: 15px;
 }
 
-#header .navbar-area .header-nav .navbar ul li ul li a::after {
+#header .navbar-area .header-nav .navbar ul li ul.dropdown-menu li a::after {
     transform: rotate(-90deg);
 }
 
-#header .navbar-area .header-nav .navbar ul li:hover > ul {
+#header .navbar-area .header-nav ul li:hover > ul.dropdown-menu {
     opacity: 1;
     visibility: visible;
     top: 100%;
     position: absolute;
-    
 }
 
-#header .navbar-area .header-nav .navbar ul li ul li ul {
-    left: 100%;
-    margin-top: -15px;
-    top: 0 !important;
+#header .navbar-area .header-nav .navbar ul li ul li ul.dropdown-menu {
+    left: -100%;
+    top: 0;
     border-left: 1px solid #dedede;
     box-shadow: unset;
+}
+
+#header .navbar-area .header-nav .navbar ul.dropdown-menu li {
+    padding: 0;
+}
+
+#header .navbar-area .header-nav .navbar ul.dropdown-menu li a::after {
+    display: none;
+}
+
+#header .navbar-area .header-nav .navbar ul.dropdown-menu li a {
+    margin: 0;
+    padding: 5px 25px;
+}
+
+#header .navbar-area .header-nav .navbar ul.dropdown-menu ul.dropdown-menu {
+    top: -15px;
+}
+
+#header .navbar-area .header-nav .navbar ul.dropdown-menu ul.dropdown-menu ul.dropdown-menu {
+    left: 220px;
+}
+
+#header .navbar-area .header-nav .navbar ul.dropdown-menu ul.dropdown-menu ul.dropdown-menu ul.dropdown-menu {
+    left: -250px;
+}
+
+#header .navbar-area .header-nav .navbar ul.dropdown-menu ul.dropdown-menu ul.dropdown-menu ul.dropdown-menu ul.dropdown-menu {
+    left: 220px;
+}
+
+#header .navbar-area .header-nav .navbar ul.dropdown-menu ul.dropdown-menu ul.dropdown-menu ul.dropdown-menu ul.dropdown-menu ul.dropdown-menu {
+    left: -250px;
 }
 
 
